--- a/applicationset.yaml
+++ b/applicationset.yaml
@@ -21,6 +21,8 @@ spec:
         path: "{{`{{ path }}`}}"
         helm:
           releaseName: "{{`{{ path.basename }}`}}"
+          valueFiles:
+            - values.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: argocd-demo
