--- a/argocd/project.yaml
+++ b/argocd/project.yaml
@@ -11,5 +11,7 @@ spec:
   destinations:
     - server: https://kubernetes.default.svc
       namespace: argocd-demo
+    - server: https://kubernetes.default.svc
+      namespace: argocd
   orphanedResources:
     warn: false
