--- a/argocd/app-of-app.yaml
+++ b/argocd/app-of-app.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: argocd-demo-app-of-app
-  namespace: argocd
+  namespace: argocd-demo
 spec:
   project: argocd-demo
   source:
