--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: argocd-demo-application
-  namespace: argocd-demo
+  namespace: argocd
 spec:
   project: argocd-demo
   source:
