--- a/project.yaml
+++ b/project.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: argocd-demo
-  namespace: argocd-demo
+  namespace: argocd
 spec:
   description: Project for demonstration of ArgoCD
   sourceRepos:
@@ -11,5 +11,7 @@ spec:
   destinations:
     - server: https://kubernetes.default.svc
       namespace: argocd-demo
+    - server: https://kubernetes.default.svc
+      namespace: argocd
   orphanedResources:
     warn: false
