--- a/argocd/app-of-app.yaml
+++ b/argocd/app-of-app.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: argocd-demo
   source:
-    repoURL: https://github.com/christianknell/argocd-demo.git
+    repoURL: https://git.knell.it/knellit/knellit-k8s/argocd-demo.git
     targetRevision: main
     path: argocd
   destination:
