--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: whoami
+  name: argocd-demo-whoami
   namespace: argocd
 spec:
   project: argocd-demo
