--- a/project.yaml
+++ b/project.yaml
@@ -13,5 +13,10 @@ spec:
       namespace: argocd-demo
     - server: https://kubernetes.default.svc
       namespace: argocd
+  clusterResourceWhitelist:
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRoleBinding
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
   orphanedResources:
     warn: false
