--- a/manifests/whoami-ingress.yaml
+++ b/manifests/whoami-ingress.yaml
@@ -4,6 +4,8 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
+  labels:
+    argocd.argoproj.io/instance: argocd-demo-app-of-app
   name: whoami
 spec:
   ingressClassName: nginx
