--- a/manifests/whoami-service.yaml
+++ b/manifests/whoami-service.yaml
@@ -2,6 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    argocd.argoproj.io/instance: argocd-demo-app-of-app
   name: whoami
 spec:
   ports:
