--- a/manifests/whoami-service.yaml
+++ b/manifests/whoami-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    argocd.argoproj.io/instance: argocd-demo-app-of-app
+    argocd.argoproj.io/instance: argocd-demo-whoami
   name: whoami
 spec:
   ports:
