--- a/manifests/whoami-deployment.yaml
+++ b/manifests/whoami-deployment.yaml
@@ -17,4 +17,4 @@ spec:
     spec:
       containers:
         - name: whoami
-          image: traefik/whoami
+          image: traefik/whoami:v1.8.6
