--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: argocd-demo
   source:
-    repoURL: https://git.knell.it/knellit/knellit-k8s/argocd-demo.git
+    repoURL: https://github.com/christianhuth/argo-cd-demo.git
     targetRevision: main
     path: manifests
   destination:
