--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -26,7 +26,7 @@ spec:
             - values.yaml
       destination:
         server: https://kubernetes.default.svc
-        namespace: argo
+        namespace: argocd-demo
       syncPolicy:
         automated:
           prune: true
